20091128 - changed framework support to libdessert0.86

20091214 - first public release

20100102 - added logging of packet routing
 
20100103 - routing logging data format changed 

20100109 - libdessert0.87
		 - RERR message format changed. Similar bugs fixed
		 
20100513 - libdessert1
         - Reimplementation. Symetric Path AODV